<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sync">Sync</string>
    <string name="settings">Settings</string>
    <string name="sortnote">Sort note</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="unlink">Unlink</string> <!-- Unlink from Dropbox -->
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
...
    <string name="remove_notebook_link">Remove link</string>
    <string name="browse">Browse</string>
    <string name="dropbox">Dropbox</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="edit_note">Edit note</string>
    <string name="delete">Delete</string>
    <string name="delete_with_quoted_argument">Delete “%s”</string>
    <string name="name">Name</string>
    <string name="query">Query</string>
    <string name="done">Done</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_with_repeater">Reschedule %s</string>
    <string name="reminder_snooze">Snooze</string>
    <string name="close">Close</string>
    <string name="import_">Import</string> <!-- Reserved keyword -->
    <string name="export">Export</string>
    <string name="overwrite">Overwrite</string>
    <string name="imported">Imported</string>
    <string name="created">Created</string>
    <string name="states">States</string>
    <string name="note">Note</string>
    <string name="notes">Notes</string>
    <string name="property">Property</string>
...
    <!-- Preferences (Settings). -->
    <string name="repos_preference_title">Repositories</string>
    <string name="repos_preference_summary">Location to synchronize your notebooks with</string>
    <string name="ssh_keygen_preference_title">SSH key generation</string>
    <string name="ssh_keygen_preference_summary">Generate key pair for Git repo sync</string>
    <string name="ssh_show_public_key_preference_title">View generated SSH public key</string>
    <string name="message_book_has_no_link">No link set</string>
    <string name="message_note_created">Note created</string>
    <string name="message_failed_creating_note">Failed to create note</string>
    <string name="message_failed_updating_note">Failed to update note</string>
    <string name="drawer_close">Close drawer</string>
    <string name="drawer_open">Open drawer</string>

...
    <string name="schedule_button_hint">Scheduled time</string>
    <string name="deadline_button_hint">Deadline time</string>
    <string name="closed_button_hint">Closed time</string>

    <string name="fragment_note_content_hint">Note content</string>
    <string name="books_context_menu_item_rename">Rename</string>
    <string name="books_context_menu_item_set_link">Set Link</string>
    <string name="books_context_menu_item_force_save">Force Save</string>
    <string name="books_context_menu_item_force_load">Force Load</string>

    <string name="move">Move</string>

    <string name="cut">Cut</string>
...
    <string name="book_link">Notebook link</string>
    <string name="book_link_details">Notebook link details</string>
    <string name="book_last_action">Notebook last action</string>
    <string name="book_notes_count">Notes count</string>
    <string name="pref_title_notebooks">Notes &amp; Notebooks</string>
    <string name="notebook">Notebook</string>
    <string name="notebooks">Notebooks</string>
    <string name="searches">Searches</string>
    <string name="search">Search</string>
    <string name="new_search">New Search</string>
    <string name="multiple_repos">Multiple repositories exist</string>
    <string name="no_repos">No repositories configured</string>
    <string name="no_books">No notebooks found</string>

    <string name="book_encoding">Notebook\'s encoding</string>
    <string name="collecting_notebooks_in_progress">Collecting notebooks…</string>
    <string name="syncing_in_progress">Syncing…</string>
    <string name="syncing_book">Syncing %s…</string>
...
    <string name="connecting">Connecting…</string>
    <string name="no_connection">No connection</string>
    <string name="connection_successful">Connection successful</string>
    <string name="last_sync_with_argument">Last sync: %s</string>

    <string name="force_loading_from_uri">Force-loading from %s …</string>
    <string name="force_loaded_from_uri">Force-loaded from %s</string>
    <string name="force_saving_to_uri">Force-saving to %s …</string>
    <string name="force_saved_to_uri">Force-saved to %s</string>
    <string name="force_saving_failed">Force-saving failed: %s</string>
    <string name="force_loading_failed">Force-loading failed: %s</string>
    <string name="loaded_from_resource">Loaded from resource %s</string>

    <string name="notebook_files">Notebook files</string>

    <string name="org_file_format">Org file format</string>
...

    <string name="book_exported">Notebook exported to %s</string>

    <string name="failed_exporting_book">Failed exporting notebook: %s</string>
    <string name="failed_importing_book">Failed importing notebook: %s</string>

    <string name="edit_book_preface">Edit preface</string>
    <string name="book_preface_hint">Text displayed before the first note</string>

    <string name="keep_screen_on_title">Enable option to keep the screen on</string>
    <string name="keep_screen_on_summary">Display menu item for toggling the option</string>

    <string name="keep_screen_on">Keep screen on</string>
...
    <string name="notebooks_start_folded_summary">Fold all notes when notebook is loaded</string>

    <string name="list_widget_name">Saved search</string>
    <string name="list_widget_select_search">Select search</string>
    <string name="list_widget_nothing_selected">No search selected</string>

    <string name="auto_sync">Auto-sync</string>
    <string name="auto_sync_experimental_summary">Used for local repositories only</string>
    <string name="auto_sync_summary">Not supported for Dropbox</string>
    <string name="auto_sync_warning">Depending on which options you choose, sync could be triggered often. If notebook is modified, its entire content is transferred to or from the repository. Certain actions might be delayed while syncing is in progress.</string>

    <string name="pref_title_sync_after_note_create">Note created</string>
    <string name="pref_summary_sync_after_note_create">Sync after creating a new note</string>

    <string name="pref_title_sync_after_note_update">Note updated or deleted</string>
    <string name="pref_summary_sync_after_note_update">Sync after updating or deleting a note</string>

    <string name="pref_title_on_resume_sync">App started or resumed</string>
...
