<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_book_card_view"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="start|center_vertical"
    android:layout_marginTop="12dp">

...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/item_book_sync_needed_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_sync"
                    android:layout_gravity="center"
...
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_sync_problem"
                    android:layout_gravity="center"
                    android:contentDescription="@string/sync"/>

                <TextView
                    android:id="@+id/item_book_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/item_book_sync_needed_icon"
                    android:layout_alignBaseline="@id/item_book_sync_needed_icon"
                    android:layout_marginEnd="@dimen/item_book_padding"
                    android:layout_alignParentStart="true"
...
                    <ImageView
                        style="@style/BookItemInfoIcon"
                        android:src="@drawable/ic_link"
                        android:contentDescription="@string/book_link_details"/>

                    <TextView
                        android:id="@+id/item_book_link_repo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:layout_marginEnd="8dp"
                        tools:text="@string/repo_url_sample"
                        android:textSize="?attr/item_book_details_text_size"/>
...
                    <ImageView
                        style="@style/BookItemInfoIcon"
                        android:src="@drawable/ic_sync"
                        android:contentDescription="@string/book_link_details"/>

                    <TextView
                        android:id="@+id/item_book_synced_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        tools:text="@string/rook_url_sample"
                        android:textSize="?attr/item_book_details_text_size"/>
                </LinearLayout>
...
                <ImageView
                    style="@style/BookItemInfoIcon"
                    android:src="@drawable/ic_info_outline"
                    android:contentDescription="@string/book_last_action"/>

                <TextView
                    android:id="@+id/item_book_last_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    tools:text="@string/books_book_sync_last_action_sample"
                    android:textSize="?attr/item_book_details_text_size"/>
            </LinearLayout>
...
