...
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical">

            <!-- Entire note -->
...
                        tools:text="Inbox"/>
                </LinearLayout>

                <!-- Title -->
                <com.orgzly.android.ui.views.richtext.RichText
                    android:id="@+id/title"
                    app:view_id="@+id/title_view"
                    app:edit_id="@+id/title_edit"
                    app:parse_checkboxes="false"
                    app:paddingHorizontal="@dimen/screen_edge"
                    app:paddingVertical="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone|flagNoFullscreen"
...
