<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/books_context_menu_force_load"
        android:title="@string/books_context_menu_item_force_load"
        android:icon="@drawable/ic_cloud_download_outline"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/books_context_menu_force_save"
        android:title="@string/books_context_menu_item_force_save"
        android:icon="@drawable/ic_cloud_upload_outline"
        app:showAsAction="always">
    </item>

    <item
...
