package com.orgzly.android.espresso;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.Espresso.pressBack;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.longClick;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.contrib.DrawerActions.close;
import static androidx.test.espresso.contrib.DrawerActions.open;
import static androidx.test.espresso.matcher.ViewMatchers.isDescendantOfA;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withParent;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static com.orgzly.android.espresso.util.EspressoUtils.clickSetting;
import static com.orgzly.android.espresso.util.EspressoUtils.contextualToolbarOverflowMenu;
import static com.orgzly.android.espresso.util.EspressoUtils.onActionItemClick;
import static com.orgzly.android.espresso.util.EspressoUtils.onBook;
import static com.orgzly.android.espresso.util.EspressoUtils.onListItem;
import static com.orgzly.android.espresso.util.EspressoUtils.onNoteInBook;
import static com.orgzly.android.espresso.util.EspressoUtils.onNotesInBook;
import static com.orgzly.android.espresso.util.EspressoUtils.onSnackbar;
import static com.orgzly.android.espresso.util.EspressoUtils.recyclerViewItemCount;
import static com.orgzly.android.espresso.util.EspressoUtils.replaceTextCloseKeyboard;
import static com.orgzly.android.espresso.util.EspressoUtils.settingsSetTodoKeywords;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.containsString;
import static org.hamcrest.Matchers.endsWith;
import static org.hamcrest.Matchers.instanceOf;
import static org.hamcrest.Matchers.not;

import android.net.Uri;
import android.os.SystemClock;
import android.widget.TextView;

import androidx.test.core.app.ActivityScenario;

import com.orgzly.BuildConfig;
import com.orgzly.R;
import com.orgzly.android.OrgzlyTest;
import com.orgzly.android.db.entity.Repo;
import com.orgzly.android.repos.RepoType;
import com.orgzly.android.sync.BookSyncStatus;
import com.orgzly.android.sync.SyncRunner;
import com.orgzly.android.ui.main.MainActivity;

import org.junit.Assert;
import org.junit.Assume;
import org.junit.Test;

import java.io.IOException;

@SuppressWarnings("unchecked")
public class SyncingTest extends OrgzlyTest {
    /**
     * Utility method for starting sync using drawer button.
     */
    private void sync() {
        onView(withId(R.id.drawer_layout)).perform(open());
        onView(withId(R.id.sync_button_container)).perform(click());
        onView(withId(R.id.drawer_layout)).perform(close());
    }

    @Test
    public void testRunSync() {
        ActivityScenario.launch(MainActivity.class);
        sync();
    }

    @Test
    public void testForceLoadingBookWithLink() {
        Repo repo = testUtils.setupRepo(RepoType.MOCK, "mock://repo-a");
        testUtils.setupRook(repo, "mock://repo-a/booky.org", "New content", "abc", 1234567890000L);
        testUtils.setupBook("booky", "First book used for testing\n* Note A");
        ActivityScenario.launch(MainActivity.class);

        onView(allOf(withText("booky"), isDisplayed())).perform(longClick());
        contextualToolbarOverflowMenu().perform(click());
        onView(withText(R.string.books_context_menu_item_set_link)).perform(click());
        onView(withText("mock://repo-a")).perform(click());

        onView(allOf(withText("booky"), isDisplayed())).perform(longClick());
        onView(withId(R.id.books_context_menu_force_load)).perform(click());
        onView(withText(R.string.overwrite)).perform(click());
        onBook(0, R.id.item_book_last_action)
                .check(matches((withText(containsString(context.getString(R.string.force_loaded_from_uri, "mock://repo-a/booky.org"))))));

        onView(allOf(withText("booky"), isDisplayed())).perform(click());
        onView(allOf(withId(R.id.item_preface_text_view), withText("New content")))
                .check(matches(isDisplayed()));
    }

    @Test
    public void testAutoSyncIsTriggeredAfterCreatingNote() {
        Repo repo = testUtils.setupRepo(RepoType.MOCK, "mock://repo-a");
        testUtils.setupRook(repo, "mock://repo-a/booky.org", "", "abc", 1234567890000L);
        ActivityScenario.launch(MainActivity.class);
        sync();

        // Set preference
        onActionItemClick(R.id.activity_action_settings, R.string.settings);
        clickSetting("prefs_screen_sync", R.string.sync);
        clickSetting("prefs_screen_auto_sync", R.string.auto_sync);
        clickSetting("pref_key_auto_sync", R.string.auto_sync);
        clickSetting("pref_key_auto_sync_on_note_create", R.string.pref_title_sync_after_note_create);
        pressBack();
        pressBack();
        pressBack();

        // Open book
        onBook(0).perform(click());

        // Create note
        onView(withId(R.id.fab)).perform(click());
        onView(withId(R.id.title_edit))
                .perform(replaceTextCloseKeyboard("new note created by test"));
        onView(withId(R.id.done)).perform(click()); // Note done

        // Check it is synced
        onView(withId(R.id.drawer_layout)).perform(open());
        onView(allOf(withText(R.string.notebooks), isDescendantOfA(withId(R.id.drawer_navigation_view)))).perform(click());
        onView(withId(R.id.fragment_books_view_flipper)).check(matches(isDisplayed()));
        onView(allOf(withText("booky"), withId(R.id.item_book_title))).check(matches(isDisplayed()));
        onView(allOf(withId(R.id.item_book_sync_needed_icon))).check(matches(not(isDisplayed())));
    }

    @Test
    public void testPrefaceModificationMakesBookOutOfSync() {
        Repo repo = testUtils.setupRepo(RepoType.MOCK, "mock://repo-a");
        testUtils.setupRook(repo, "mock://repo-a/booky.org", "", "abc", 1234567890000L);
        ActivityScenario.launch(MainActivity.class);
        sync();

        onBook(0, R.id.item_book_sync_needed_icon).check(matches(not(isDisplayed())));

        // Change preface
        onBook(0).perform(click());
        onActionItemClick(R.id.books_options_menu_book_preface, R.string.edit_book_preface);
        onView(withId(R.id.fragment_book_preface_content)).perform(click());
        onView(withId(R.id.fragment_book_preface_content_edit))
                .perform(replaceTextCloseKeyboard("Modified preface"));
        onView(withId(R.id.done)).perform(click()); // Preface done
        pressBack();

        onBook(0, R.id.item_book_sync_needed_icon).check(matches(isDisplayed()));
    }

    @Test
    public void nonLinkedBookCannotBeMadeOutOfSync() {
        testUtils.setupBook("booky", "* Note A");
        ActivityScenario.launch(MainActivity.class);

        onBook(0, R.id.item_book_sync_needed_icon).check(matches(not(isDisplayed())));

        // Modify book
        onBook(0).perform(click());
        onNoteInBook(1).perform(longClick());
        onView(withId(R.id.toggle_state)).perform(click());
        pressBack();
        pressBack();

        onBook(0, R.id.item_book_sync_needed_icon).check(matches(not(isDisplayed())));
    }

    @Test
    public void testForceLoadingBookWithNoLinkNoRepos() {
        testUtils.setupBook("booky", "First book used for testing\n* Note A");
        testUtils.setupBook("book-two", "Second book used for testing\n* Note 1\n* Note 2");
        ActivityScenario.launch(MainActivity.class);

        onView(allOf(withText("booky"), isDisplayed())).perform(longClick());
        onView(withId(R.id.books_context_menu_force_load)).perform(click());
        onView(withText(R.string.overwrite)).perform(click());
        onSnackbar().check(matches(withText(endsWith(context.getString(R.string.message_book_has_no_link)))));
    }

    @Test
    public void testForceLoadingBookWithNoLinkSingleRepo() {
        testUtils.setupRepo(RepoType.MOCK, "mock://repo-a");
        testUtils.setupBook("booky", "First book used for testing\n* Note A");
        testUtils.setupBook("book-two", "Second book used for testing\n* Note 1\n* Note 2");
        ActivityScenario.launch(MainActivity.class);

        onView(allOf(withText("booky"), isDisplayed())).perform(longClick());
        onView(withId(R.id.books_context_menu_force_load)).perform(click());
        onView(withText(R.string.overwrite)).perform(click());
        onSnackbar().check(matches(withText(endsWith(context.getString(R.string.message_book_has_no_link)))));
    }

    /* Books view was returning multiple entries for the same book, due to duplicates in encodings
     * table. The last statement in this method will fail if there are multiple books matching.
     */
    @Test
    public void testForceLoadingMultipleTimes() {
        Repo repo = testUtils.setupRepo(RepoType.MOCK, "mock://repo-a");
        testUtils.setupRook(repo, "mock://repo-a/book-one.org", "New content", "abc", 1234567890000L);
        testUtils.setupBook("book-one", "First book used for testing\n* Note A");
        testUtils.setupBook("book-two", "Second book used for testing\n* Note 1\n* Note 2");
        ActivityScenario.launch(MainActivity.class);

        onView(allOf(withText("book-one"), isDisplayed())).perform(longClick());
        contextualToolbarOverflowMenu().perform(click());
        onView(withText(R.string.books_context_menu_item_set_link)).perform(click());
        onView(withText("mock://repo-a")).perform(click());

        onView(allOf(withText("book-one"), isDisplayed())).perform(longClick());
        onView(withId(R.id.books_context_menu_force_load)).perform(click());
        onView(withText(R.string.overwrite)).perform(click());

        onBook(0, R.id.item_book_last_action)
                .check(matches(withText(endsWith(
                        context.getString(R.string.force_loaded_from_uri, "mock://repo-a/book-one.org")))));

        onView(allOf(withText("book-one"), isDisplayed())).perform(longClick());
        onView(withId(R.id.books_context_menu_force_load)).perform(click());
        onView(withText(R.string.overwrite)).perform(click());

        onBook(0, R.id.item_book_last_action)
                .check(matches(withText(endsWith(
                        context.getString(R.string.force_loaded_from_uri, "mock://repo-a/book-one.org")))));
    }

    /*
     * Book is left with out-of-sync icon when it's modified, then force-loaded.
     * This is because book's mtime was not being updated and was greater then remote book's mtime.
     */
    @Test
    public void testForceLoadingAfterModification() {
        testUtils.setupBook("book-one", "* Note");
        testUtils.setupRepo(RepoType.MOCK, "mock://repo-a");
        ActivityScenario.launch(MainActivity.class);

        // Force save
        onView(allOf(withText("book-one"), isDisplayed())).perform(longClick());
        onView(withId(R.id.books_context_menu_force_save)).perform(click());
        onView(withText(R.string.overwrite)).perform(click());

        // Modify book
        onBook(0).perform(click());
        onNoteInBook(1).perform(longClick());
        onView(withId(R.id.toggle_state)).perform(click());
        pressBack();
        pressBack();

        // Force load
        onView(allOf(withText("book-one"), isDisplayed())).perform(longClick());
        onView(withId(R.id.books_context_menu_force_load)).perform(click());
        onView(withText(R.string.overwrite)).perform(click());

        // Check sync icon
        onView(allOf(withId(R.id.item_book_sync_needed_icon))).check(matches(not(isDisplayed())));
    }

    @Test
    public void testForceSavingBookWithNoLinkAndMultipleRepos() {
        testUtils.setupRepo(RepoType.MOCK, "mock://repo-a");
        testUtils.setupRepo(RepoType.MOCK, "mock://repo-b");
        testUtils.setupBook("book-one", "First book used for testing\n* Note A");
        testUtils.setupBook("book-two", "Second book used for testing\n* Note 1\n* Note 2");
        ActivityScenario.launch(MainActivity.class);

        onView(allOf(withText("book-one"), isDisplayed())).perform(longClick());
        onView(withId(R.id.books_context_menu_force_save)).perform(click());
        onView(withText(R.string.overwrite)).perform(click());

        onBook(0, R.id.item_book_last_action)
                .check(matches(withText(endsWith(
                        context.getString(R.string.force_saving_failed, context.getString(R.string.multiple_repos))))));

    }

    @Test
    public void testForceSavingBookWithNoLinkNoRepos() {
        testUtils.setupBook("book-one", "First book used for testing\n* Note A");
        testUtils.setupBook("book-two", "Second book used for testing\n* Note 1\n* Note 2");
        ActivityScenario.launch(MainActivity.class);

        onView(allOf(withText("book-one"), isDisplayed())).perform(longClick());
        onView(withId(R.id.books_context_menu_force_save)).perform(click());
        onView(withText(R.string.overwrite)).perform(click());
        onBook(0, R.id.item_book_last_action)
                .check(matches(withText(endsWith(
                        context.getString(R.string.force_saving_failed, context.getString(R.string.no_repos))))));
    }

    @Test
    public void testForceSavingBookWithNoLinkSingleRepo() {
        testUtils.setupRepo(RepoType.MOCK, "mock://repo-a");
        testUtils.setupBook("book-one", "First book used for testing\n* Note A");
        testUtils.setupBook("book-two", "Second book used for testing\n* Note 1\n* Note 2");
        ActivityScenario.launch(MainActivity.class);

        onView(allOf(withText("book-one"), isDisplayed())).perform(longClick());
        onView(withId(R.id.books_context_menu_force_save)).perform(click());
        onView(withText(R.string.overwrite)).perform(click());

        onBook(0, R.id.item_book_last_action)
                .check(matches(withText(endsWith(
                        context.getString(R.string.force_saved_to_uri, "mock://repo-a/book-one.org")))));
    }

    @Test
    public void testForceSavingBookWithLink() {
        Repo repo = testUtils.setupRepo(RepoType.MOCK, "mock://repo-a");
        testUtils.setupBook("booky", "First book used for testing\n* Note A", repo);
        ActivityScenario.launch(MainActivity.class);

        onView(allOf(withText("booky"), isDisplayed())).perform(longClick());
        onView(withId(R.id.books_context_menu_force_save)).perform(click());
        onView(withText(R.string.overwrite)).perform(click());

        onBook(0, R.id.item_book_last_action)
                .check(matches(withText(endsWith(
                        context.getString(R.string.force_saved_to_uri, "mock://repo-a/booky.org")))));
    }

    @Test
    public void testSyncButton() {
        testUtils.setupRepo(RepoType.MOCK, "mock://repo-a");
        testUtils.setupBook("book-one", "First book used for testing\n* Note A");
        testUtils.setupBook("book-two", "Second book used for testing\n* Note 1\n* Note 2");
        ActivityScenario.launch(MainActivity.class);

        sync();
    }

    @Test
    public void testSavingAndLoadingBookBySyncing() {
        testUtils.setupRepo(RepoType.MOCK, "mock://repo-a");
        testUtils.setupBook("booky",
                "Sample book used for tests\n" +
                "* Note #1.\n" +
                "* Note #2.\n" +
                "");
        ActivityScenario.launch(MainActivity.class);

        sync();
        onView(allOf(withText("booky"), isDisplayed())).check(matches(isDisplayed()));
        onBook(0).perform(longClick());
        contextualToolbarOverflowMenu().perform(click());
        onView(withText(R.string.delete)).perform(click());
        onView(withText(R.string.delete)).perform(click());
        onView(withId(R.id.item_book_card_view)).check(matches(not(isDisplayed())));
        sync();
        onView(withId(R.id.item_book_card_view)).check(matches(isDisplayed()));
        onView(allOf(withText("booky"), isDisplayed())).check(matches(isDisplayed()));
        onBook(0).perform(click());
        onNoteInBook(2).perform(click());
        onView(withId(R.id.scroll_view)).check(matches(isDisplayed()));
    }

    @Test
    public void testBackToModifiedBookAfterSyncing() {
        Repo repo = testUtils.setupRepo(RepoType.MOCK, "mock://repo-a");

        testUtils.setupBook("booky",
                "Sample book used for tests\n" +
                "* Note #1.\n" +
                "* Note #2.\n" +
                "** TODO Note #3.\n" +
                "** Note #4.\n" +
                "*** DONE Note #5.\n" +
                "**** Note #6.\n" +
                "** Note #7.\n" +
                "* Note #8.\n" +
                "**** Note #9.\n" +
                "** ANTIVIVISECTIONISTS Note #10.\n" +
                "** Note #11. DIE PERSER (Ü: Andreas Röhler) Schauspiel 1 D 3 H Stand:\n" +
                "");
        ActivityScenario.launch(MainActivity.class);

        sync();
        onView(allOf(withText("booky"), isDisplayed())).perform(click());

        onView(withId(R.id.drawer_layout)).perform(open());
        onView(allOf(withText(R.string.notebooks), isDisplayed())).perform(click());

        /* Make sure book has been uploaded to repo and is linked now. */
        onBook(0, R.id.item_book_link_repo).check(matches(allOf(withText("mock://repo-a"), isDisplayed())));
        onBook(0, R.id.item_book_synced_url).check(matches(allOf(withText("mock://repo-a/booky.org"), isDisplayed())));

        /* Modify remote book directly. */
        testUtils.setupRook(repo, "mock://repo-a/booky.org", "NEW CONTENT", "abc", 1234567890000L);

        sync();

        /* Go back to book. */
        pressBack();
        onView(allOf(withId(R.id.item_preface_text_view), withText("NEW CONTENT")))
                .check(matches(isDisplayed()));
    }

    @Test
    public void testBookParsingAfterKeywordsSettingChange() {
        testUtils.setupRepo(RepoType.MOCK, "mock://repo-a");
        testUtils.setupBook("booky",
                "Sample book used for tests\n" +
                "* Note #1.\n" +
                "* Note #2.\n" +
                "** TODO Note #3.\n" +
                "** Note #4.\n" +
                "*** DONE Note #5.\n" +
                "**** Note #6.\n" +
                "** Note #7.\n" +
                "* Note #8.\n" +
                "**** Note #9.\n" +
                "** ANTIVIVISECTIONISTS Note #10.\n" +
                "** Note #11. DIE PERSER (Ü: Andreas Röhler) Schauspiel 1 D 3 H Stand:\n" +
                "");
        ActivityScenario.launch(MainActivity.class);

        sync();

        onView(allOf(withText("booky"), withId(R.id.item_book_title))).perform(click());

        /* Open note "ANTIVIVISECTIONISTS Note #10." and check title. */
        onNoteInBook(10).perform(click());
        onView(withId(R.id.title_view)).check(matches(allOf(withText("ANTIVIVISECTIONISTS Note #10."), isDisplayed())));

        settingsSetTodoKeywords("ANTIVIVISECTIONISTS");

        onView(withId(R.id.drawer_layout)).perform(open());
        onView(allOf(withText(R.string.notebooks), isDisplayed())).perform(click());
        onView(withId(R.id.fragment_books_view_flipper)).check(matches(isDisplayed()));

        /* Delete book */
        onBook(0).perform(longClick());
        contextualToolbarOverflowMenu().perform(click());
        onView(withText(R.string.delete)).perform(click());
        onView(withText(R.string.delete)).perform(click());

        sync();

        onView(allOf(withText("booky"), withId(R.id.item_book_title))).perform(click());

        /* Open note "ANTIVIVISECTIONISTS Note #10." and check title. */
        onNoteInBook(10).perform(click());
        onView(withId(R.id.title_view)).check(matches(allOf(withText("Note #10."), isDisplayed())));
    }

    @Test
    public void testChangeBookLink() {
        Repo repoA = testUtils.setupRepo(RepoType.MOCK, "mock://repo-a");
        Repo repoB = testUtils.setupRepo(RepoType.MOCK, "mock://repo-b");
        testUtils.setupRook(repoA, "mock://repo-a/book-1.org", "Remote content for book in repo a", "abc", 1234567890);
        testUtils.setupRook(repoB, "mock://repo-b/book-1.org", "Remote content for book in repo b", "def", 1234567891);
        ActivityScenario.launch(MainActivity.class);

        sync();

        onBook(0, R.id.item_book_last_action)
                .check(matches(allOf(withText(containsString(BookSyncStatus.DUMMY_WITHOUT_LINK_AND_MULTIPLE_ROOKS.msg())), isDisplayed())));

        /* Set link to repo-b. */
        onView(allOf(withText("book-1"), isDisplayed())).perform(longClick());
        contextualToolbarOverflowMenu().perform(click());
        onView(withText(R.string.books_context_menu_item_set_link)).perform(click());
        onView(withText("mock://repo-b")).perform(click());

        onBook(0, R.id.item_book_link_repo).check(matches(withText("mock://repo-b")));

        sync();

        onBook(0, R.id.item_book_last_action)
                .check(matches(allOf(withText(containsString(BookSyncStatus.DUMMY_WITH_LINK.msg())), isDisplayed())));

        onBook(0).perform(click());
        onView(withId(R.id.item_preface_text_view))
                .check(matches(withText("Remote content for book in repo b")));
        pressBack();

        /* Set link to repo-a. */
        onView(allOf(withText("book-1"), isDisplayed())).perform(longClick());
        contextualToolbarOverflowMenu().perform(click());
        onView(withText(R.string.books_context_menu_item_set_link)).perform(click());
        onView(withText("mock://repo-a")).perform(click());

        onBook(0, R.id.item_book_link_repo).check(matches(withText("mock://repo-a")));

        sync();

        onBook(0, R.id.item_book_last_action)
                .check(matches(allOf(withText(containsString(BookSyncStatus.CONFLICT_LAST_SYNCED_ROOK_AND_LATEST_ROOK_ARE_DIFFERENT.msg())), isDisplayed())));

        /* Still the same content due to conflict. */
        onBook(0).perform(click());

        onView(allOf(withId(R.id.item_preface_text_view), withText("Remote content for book in repo b")))
                .check(matches(isDisplayed()));
    }

    @Test
    public void testSyncTwiceInARow() {
        testUtils.setupRepo(RepoType.MOCK, "mock://repo-a");
        Repo repoB = testUtils.setupRepo(RepoType.MOCK, "mock://repo-b");
        testUtils.setupRook(repoB, "mock://repo-b/book-2.org", "Remote content for book 2", "abc", 1234567890000L);
        testUtils.setupRook(repoB, "mock://repo-b/book-3.org", "Remote content for book 3", "def", 1234567891000L);
        testUtils.setupBook("book-1", "Local content for book 1");
        testUtils.setupBook("book-2", "Local content for book 2", repoB);
        ActivityScenario.launch(MainActivity.class);

        sync();

        onBook(0, R.id.item_book_last_action)
                .check(matches(allOf(withText(containsString(BookSyncStatus.ONLY_BOOK_WITHOUT_LINK_AND_MULTIPLE_REPOS.msg())), isDisplayed())));
        onBook(1, R.id.item_book_last_action)
                .check(matches(allOf(withText(containsString(BookSyncStatus.CONFLICT_BOOK_WITH_LINK_AND_ROOK_BUT_NEVER_SYNCED_BEFORE.msg())), isDisplayed())));
        onBook(2, R.id.item_book_last_action)
                .check(matches(allOf(withText(containsString(BookSyncStatus.DUMMY_WITHOUT_LINK_AND_ONE_ROOK.msg())), isDisplayed())));

        onBook(0).perform(click());
        onView(withId(R.id.item_preface_text_view))
                .check(matches(withText("Local content for book 1")));
        pressBack();
        onBook(1).perform(click());
        onView(withId(R.id.item_preface_text_view))
                .check(matches(withText("Local content for book 2")));
        pressBack();
        /* Whole notebook view is too big to fit on small devices' screen, so we get
         * "at least 90 percent of the view's area is displayed to the user"
